hetz/joplin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin
  namespace: default
  labels:
    app: joplin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joplin
  template:
    metadata:
      name: joplin
      labels:
        app: joplin
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: joplin
          image: joplin/server:2.10-beta
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /data
              name: joplin-data
          ports:
            - containerPort: 22300
              name: joplin
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: joplin-data
          persistentVolumeClaim:
            claimName: joplin-data
