hetz/joplin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joplin-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  tls:
    - hosts:
        - joplin.spacemule.net
      secretName: joplin-tls-secret
  rules:
    - host: joplin.spacemule.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: joplin
                port:
                  number: 80
